add styles for btn next

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <button class="btn">ANSWER3</button>
                 <button class="btn">ANSWER4</button>
             </div>
+            <button id="next-btn">NEXT</button>
         </div>
     </div>
     </main>
